# garth-mcp-server

./: .env.example  get_steps.py  pyproject.toml
scripts/: list_tools.py
src/garth_mcp_server/: __init__.py  app.py  auth.py  cli.py
src/garth_mcp_server/tools/: __init__.py  activities.py  auth_tools.py  devices.py  system.py  user.py  wellness.py
