[tool.poetry]
name = "garth-mcp-server"
version = "0.0.9"
description = "Garmin Connect MCP server"
authors = ["Matin Tamizi <mtamizi@duck.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "garth_mcp_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
garth = "^0.5.14"
mcp = {extras = ["fastmcp"], version = "^1.1.2"}
uvicorn = "^0.34.0"
starlette = "^0.45.2"

[tool.poetry.group.dev.dependencies]
ipython = "*"
ipdb = "*"
ipykernel = "*"

[tool.poetry.group.linting.dependencies]
ruff = "*"
mypy = "*"
types-requests = "*"

[tool.poetry.scripts]
garth-mcp-server = "garth_mcp_server.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
